--- a/singolo1.html
+++ b/singolo1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Singolo 1</title>
-    <link rel="stylesheet" href="singolo1.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,400,700,900&display=swap&subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
 </head>
@@ -16,7 +16,7 @@
                 </div>
                 <nav class="header__navigation">
                     <ul class="navigator">
-                        <li>Home</li>
+                        <li class="active">Home</li>
                         <li>Services</li>
                         <li>Portfolio</li>
                         <li>About</li>
@@ -24,87 +24,85 @@
                     </ul>
                 </nav>
         </header>
-        <main>
+        <main class="main">
             <section class="slider">
-                <div class="slider__button"></div>
-                <div class="slider__images">
-                    <div class="slider_phone slider_phone-vertical">
-                         <div class="slider_detail slider_detail-vertical"></div>
-                     </div>
-                    <div class="slider_phone slider_phone-horisontal">
-                         <div class="slider_detail slider_detail-horizontal"></div>
+                    <div class="slider__button"></div>
+                    <div class="slider__images">
+                        <div class="phone phone-vertical">
+                             <div class="phone__screen phone__screen-vertical"></div>
+                         </div>
+                        <div class="phone phone-horisontal">
+                             <div class="phone__screen phone__screen-horizontal"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="slider__button slider__button-right"></div>
+                    <div class="slider__button slider__button-right"></div>
             </section>
-            <section class="tools">
-                <div class="wrapper-tools">
+            <section class="services">
+                <div class="services__wrapper">
                     <h2>Our Services</h2>
                     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                    <div class="layout-3-column">
+                    <div class="tools">
                         <div class="tool">
-                            <div class="tool__icon tool__icon-pen"></div>
-                            <div class="tool__description">
-                                <h4>Custom Design</h4>
-                                <p>
-                                    Curabitur vestibulum eget
-                                    mauris quis laoreet. 
-                                    Phasellus in quam laoreet,
-                                    viverra lacus ut, ultrices velit.
-                                </p>
-                            </div>
+                                <div class="tool__icon tool__icon-pen"></div>
+                                <div class="tool__description">
+                                    <h4>Custom Design</h4>
+                                    <p>
+                                        Curabitur vestibulum eget
+                                        mauris quis laoreet. 
+                                        Phasellus in quam laoreet,
+                                        viverra lacus ut, ultrices velit.
+                                    </p>
+                                </div>
                         </div>
                         <div class="tool">
-                            <div class="tool__icon tool__icon-light"></div>
-                            <div class="tool__description">
-                                <h4>Inovative Ideas</h4>
-                                <p>
-                                Quisque luctus, quam eget molestie
-                                commodo, lacus purus cursus purus,
-                                nec rutrum tellus dolor id lorem.
-                                </p>
-                            </div>
+                                <div class="tool__icon tool__icon-light"></div>
+                                <div class="tool__description">
+                                    <h4>Inovative Ideas</h4>
+                                    <p>
+                                    Quisque luctus, quam eget molestie
+                                    commodo, lacus purus cursus purus,
+                                    nec rutrum tellus dolor id lorem.
+                                    </p>
+                                </div>
                         </div>
                         <div class="tool">
-                            <div class="tool__icon tool__icon-heart"></div>
-                            <div class="tool__description">
-                                <h4>Love Is The Answer</h4>
-                                <p>
-                                Nulla sed nunc et tortor
-                                luctus faucibus. Morbi
-                                at aliquet turpis,
-                                et consequat felis. Quisque condimentum.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="layout-3-column">
-                        <div class="tool">
-                            <div class="tool__icon tool__icon-phone"></div>
-                            <div class="tool__description">
-                                <h4>Responsive Layout</h4>
-                                <p>Sed porttitor placerat rhoncus.
-                                In at nunc tellus. Maecenas blandit
-                                nunc ligula. Praesent elit leo.</p>
-                            </div>   
+                                <div class="tool__icon tool__icon-heart"></div>
+                                <div class="tool__description">
+                                    <h4>Love Is The Answer</h4>
+                                    <p>
+                                    Nulla sed nunc et tortor
+                                    luctus faucibus. Morbi
+                                    at aliquet turpis,
+                                    et consequat felis. Quisque condimentum.
+                                    </p>
+                                </div>
                         </div>
                         <div class="tool">
-                            <div class="tool__icon tool__icon-message"></div>
-                            <div class="tool__description">
-                                <h4>24 / 7 Support</h4>
-                                <p>Vivamus vel quam lacinia, tincidunt dui
-                                non, vehicula nisi. Nulla a sem erat.
-                                Pellentesque egestas venenatis lorem .</p>
-                            </div>
+                                <div class="tool__icon tool__icon-phone"></div>
+                                <div class="tool__description">
+                                    <h4>Responsive Layout</h4>
+                                    <p>Sed porttitor placerat rhoncus.
+                                    In at nunc tellus. Maecenas blandit
+                                    nunc ligula. Praesent elit leo.</p>
+                                </div>   
                         </div>
                         <div class="tool">
-                            <div class="tool__icon tool__icon-star"></div>
-                            <div class="tool__description">
-                                <h4>Feel Like A Star</h4>
-                                <p>Quisque hendrerit purus dapibus,
-                                    ornare nibh vitae,
-                                    viverra nibh. Fusce vitae aliquam tellus.</p>
-                            </div>
+                                <div class="tool__icon tool__icon-message"></div>
+                                <div class="tool__description">
+                                    <h4>24 / 7 Support</h4>
+                                    <p>Vivamus vel quam lacinia, tincidunt dui
+                                    non, vehicula nisi. Nulla a sem erat.
+                                    Pellentesque egestas venenatis lorem.</p>
+                                </div>
+                        </div>
+                        <div class="tool">
+                                <div class="tool__icon tool__icon-star"></div>
+                                <div class="tool__description">
+                                    <h4>Feel Like A Star</h4>
+                                    <p>Quisque hendrerit purus dapibus,
+                                        ornare nibh vitae,
+                                        viverra nibh. Fusce vitae aliquam tellus.</p>
+                                </div>
                         </div>
                     </div>
                 </div>
