--- a/singolo1.html
+++ b/singolo1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Singolo 1</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="singolo1.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,400,700,900&display=swap&subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
 </head>
