--- a/singolo1.html
+++ b/singolo1.html
@@ -28,14 +28,14 @@
             <section class="slider">
                     <div class="slider__button"></div>
                     <div class="slider__images">
-                        <div class="phone phone-vertical">
-                             <div class="phone__screen phone__screen-vertical"></div>
+                        <div class="phone phone_vertical">
+                             <div class="phone__screen phone__screen_vertical"></div>
                          </div>
-                        <div class="phone phone-horisontal">
-                             <div class="phone__screen phone__screen-horizontal"></div>
+                        <div class="phone phone_horisontal">
+                             <div class="phone__screen phone__screen_horizontal"></div>
                         </div>
                     </div>
-                    <div class="slider__button slider__button-right"></div>
+                    <div class="slider__button slider__button_right"></div>
             </section>
             <section class="services">
                 <div class="services__wrapper">
@@ -43,7 +43,7 @@
                     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                     <div class="tools">
                         <div class="tool">
-                                <div class="tool__icon tool__icon-pen"></div>
+                                <div class="tool__icon tool__icon_pen"></div>
                                 <div class="tool__description">
                                     <h4>Custom Design</h4>
                                     <p>
@@ -55,7 +55,7 @@
                                 </div>
                         </div>
                         <div class="tool">
-                                <div class="tool__icon tool__icon-light"></div>
+                                <div class="tool__icon tool__icon_light"></div>
                                 <div class="tool__description">
                                     <h4>Inovative Ideas</h4>
                                     <p>
@@ -66,7 +66,7 @@
                                 </div>
                         </div>
                         <div class="tool">
-                                <div class="tool__icon tool__icon-heart"></div>
+                                <div class="tool__icon tool__icon_heart"></div>
                                 <div class="tool__description">
                                     <h4>Love Is The Answer</h4>
                                     <p>
@@ -78,7 +78,7 @@
                                 </div>
                         </div>
                         <div class="tool">
-                                <div class="tool__icon tool__icon-phone"></div>
+                                <div class="tool__icon tool__icon_phone"></div>
                                 <div class="tool__description">
                                     <h4>Responsive Layout</h4>
                                     <p>Sed porttitor placerat rhoncus.
@@ -87,7 +87,7 @@
                                 </div>   
                         </div>
                         <div class="tool">
-                                <div class="tool__icon tool__icon-message"></div>
+                                <div class="tool__icon tool__icon_message"></div>
                                 <div class="tool__description">
                                     <h4>24 / 7 Support</h4>
                                     <p>Vivamus vel quam lacinia, tincidunt dui
@@ -96,7 +96,7 @@
                                 </div>
                         </div>
                         <div class="tool">
-                                <div class="tool__icon tool__icon-star"></div>
+                                <div class="tool__icon tool__icon_star"></div>
                                 <div class="tool__description">
                                     <h4>Feel Like A Star</h4>
                                     <p>Quisque hendrerit purus dapibus,
