--- a/singolo2.html
+++ b/singolo2.html
@@ -23,18 +23,30 @@
                         </ul>
                     </div>
                     <div class="works">
-                        <div class="works__image works__image_1"></div>
-                        <div class="works__image works__image_2"></div> 
-                        <div class="works__image works__image_3"></div> 
-                        <div class="works__image works__image_4"></div> 
-                        <div class="works__image works__image_5"></div> 
-                        <div class="works__image works__image_6"></div> 
-                        <div class="works__image works__image_7"></div> 
-                        <div class="works__image works__image_8"></div> 
-                        <div class="works__image works__image_9"></div> 
-                        <div class="works__image works__image_10"></div> 
-                        <div class="works__image works__image_11"></div> 
-                        <div class="works__image works__image_12"></div>                 
+                        <div class="works__layout">
+                            <div class="works__image works__image_1"></div>
+                            <div class="works__image works__image_5"></div> 
+                            <div class="works__image works__image_9"></div> 
+                            <div class="works__image works__image_12"></div>                 
+                        </div>
+                        <div class="works__layout">
+                            <div class="works__image works__image_2"></div> 
+                            <div class="works__image works__image_6"></div> 
+                            <div class="works__image works__image_10"></div> 
+                            <div class="works__image works__image_12"></div>                 
+                        </div>
+                        <div class="works__layout">
+                            <div class="works__image works__image_3"></div> 
+                            <div class="works__image works__image_7"></div> 
+                            <div class="works__image works__image_11"></div> 
+                            <div class="works__image works__image_12"></div>                 
+                        </div>
+                        <div class="works__layout">
+                            <div class="works__image works__image_4"></div> 
+                            <div class="works__image works__image_8"></div> 
+                            <div class="works__image works__image_12"></div>                 
+                        </div>
+    
                     </div>
                 </div>
             </section>
@@ -43,9 +55,9 @@
                     <h2>About Us</h2>
                     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                     <div class="about__resumes">
-                        <div class="resume">
+                        <div class="resume__layout">
                             <div class="resume__image resume__image_1"></div>
-                            <h3>Adam Jensen</h3>
+                            <h3>Adam Jansen</h3>
                             <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
                             <div class="resume__link">
                                 <ul class="social">
@@ -56,7 +68,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="resume">
+                        <div class="resume__layout">
                             <div class="resume__image resume__image_2"></div>
                             <h3>Desmond Miles</h3>
                             <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
@@ -69,7 +81,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="resume">
+                        <div class="resume__layout">
                             <div class="resume__image resume__image_3"></div>
                             <h3>Scolara Visari</h3>
                             <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
