--- a/index.html
+++ b/index.html
@@ -9,34 +9,48 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
+        <header class="header" id="header">
                 <div class="header__logo">
                     <a class="logo" href=""><h1>Singolo<b>*</b></h1></a>
                 </div>
                 <nav class="header__navigation">
                     <ul class="navigator">
-                        <li class="active">Home</li>
-                        <li>Services</li>
-                        <li>Portfolio</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li><a class="navigator__link" href="#top">Home</a></li>
+                        <li><a class="navigator__link" href="#services">Services</a></li>
+                        <li><a class="navigator__link" href="#portfolio">Portfolio</a></li>
+                        <li><a class="navigator__link"href="#about">About</a></li>
+                        <li><a class="navigator__link" href="#quote">Contact</a></li>
                     </ul>
                 </nav>
         </header>
         <main class="main">
-            <section class="slider">
-                    <div class="slider__button"></div>
-                    <div class="slider__images">
+            <section class="slider" id="slider">
+                    <div class="slider__button" ></div>
+                    <div class="slider__images slider__images_1 sliderShow" >
                         <div class="phone phone_vertical">
                              <div class="phone__screen phone__screen_vertical"></div>
+                             <div class="phone__touch phone__touch_vertical"></div>
                          </div>
-                        <div class="phone phone_horisontal">
+                        <div class="phone phone_horizontal">
                              <div class="phone__screen phone__screen_horizontal"></div>
+                             <div class="phone__touch phone__touch_horizontal"></div>
+                        </div>
+                    </div>
+                    <div class="slider__images slider__images_2" >
+                        <div class="phone phone_vertical phone_vertical_green">
+                             <div class="phone__screen phone__screen_vertical phone__screen_vertical_green"></div>
+                             <div class="phone__touch phone__touch_green"></div>
+                         </div>
+                         <div class="phone phone_vertical phone_vertical_small">
+                            <div class="phone__screen phone__screen_vertical"></div>
+                        </div>
+                        <div class="phone phone_vertical phone_vertical_small phone_vertical_small_right ">
+                            <div class="phone__screen phone__screen_vertical"></div>
                         </div>
                     </div>
                     <div class="slider__button slider__button_right"></div>
             </section>
-            <section class="services">
+            <section class="services" id="services">
                 <div class="services__wrapper">
                     <h2>Our Services</h2>
                     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
@@ -106,47 +120,72 @@
                     </div>
                 </div>
             </section>
-            <section class="portfolio">
+            <section class="portfolio" id="portfolio">
                 <div class="portfolio__wrapper">
                     <h2>Portfolio</h2>
                     <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
                     <div class="tags">
                         <ul class="tags__list">
-                            <li>All</li>
-                            <li>Web Design</li>
-                            <li>Graphic Design</li>
-                            <li>Artwork</li>
+                            <li class="tag active">All</li>
+                            <li class="tag">Web Design</li>
+                            <li class="tag">Graphic Design</li>
+                            <li class="tag">Artwork</li>
                         </ul>
                     </div>
-                    <div class="works">
-                        <div class="works__layout">
-                            <div class="works__image works__image_1"></div>
-                            <div class="works__image works__image_5"></div> 
-                            <div class="works__image works__image_9"></div> 
-                            <div class="works__image works__image_12"></div>                 
-                        </div>
-                        <div class="works__layout">
-                            <div class="works__image works__image_2"></div> 
-                            <div class="works__image works__image_6"></div> 
-                            <div class="works__image works__image_10"></div> 
-                            <div class="works__image works__image_12"></div>                 
-                        </div>
-                        <div class="works__layout">
-                            <div class="works__image works__image_3"></div> 
-                            <div class="works__image works__image_7"></div> 
-                            <div class="works__image works__image_11"></div> 
-                            <div class="works__image works__image_12"></div>                 
-                        </div>
-                        <div class="works__layout">
-                            <div class="works__image works__image_4"></div> 
-                            <div class="works__image works__image_8"></div> 
-                            <div class="works__image works__image_12"></div>                 
-                        </div>
-    
+                </div>
+                <div class="works">
+                    <div class="works__image works__image_1">
+                        <span class="tag">Artwork</span>
                     </div>
+                    <div class="works__image works__image_2">
+                        <span class="tag">Graphic Design</span>
+                    </div> 
+                    <div class="works__image works__image_3">
+                        <span class="tag">Artwork</span>
+                    </div> 
+                    <div class="works__image works__image_4">
+                        <span class="tag">Web Design</span>
+                    </div>                 
+                    <div class="works__image works__image_5">
+                        <span class="tag">Graphic Design</span>
+                        <span class="tag">Web Design</span>
+                    </div> 
+                    <div class="works__image works__image_6">
+                        <span class="tag">Web Design</span>
+                    </div> 
+                    <div class="works__image works__image_7">
+                        <span class="tag">Artwork</span>
+                    </div> 
+                    <div class="works__image works__image_8">
+                        <span class="tag">Web Design</span>
+                    </div>                 
+                    <div class="works__image works__image_9">
+                        <span class="tag">Graphic Design</span>
+                        <span class="tag">Web Design</span>
+                    </div> 
+                    <div class="works__image works__image_10">
+                        <span class="tag">Web Design</span>
+                    </div> 
+                    <div class="works__image works__image_11">
+                        <span class="tag">Artwork</span>
+                        <span class="tag">Web Design</span>
+                    </div> 
+                    <div class="works__image works__image_12">
+                        <span class="tag">Web Design</span>
+                    </div>                 
+                    <div class="works__image works__image_13">
+                        <span class="tag">Graphic Design</span>
+                    </div> 
+                    <div class="works__image works__image_14">
+                        <span class="tag">Web Design</span>
+                    </div> 
+                    <div class="works__image works__image_15">
+                        <span class="tag">Artwork</span>
+                        <span class="tag">Graphic Design</span>
+                    </div>                 
                 </div>
             </section>
-            <section class="about">
+            <section class="about" id="about">
                 <div class="about__wrapper">
                     <h2>About Us</h2>
                     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
@@ -193,16 +232,24 @@
                     </div>
                 </div>
             </section>
-            <section class="quote">
+            <section class="quote" id="quote">
                 <h2>Get a Quote</h2>
                 <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                 <div class="quote__container">
-                    <form class="quote__form" action="" method="POST">
-                        <input type="text" name="name" class="input input__text" placeholder="Name (Reqiured)" pattern="^[A-Za-zА-Яа-яЁё\s]+$" required>
-                        <input type="email" name="email" class="input input__email" placeholder="Email (Reqiured)" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{3,}$" required>
-                        <input type="text" name="subject" class="input input__sub" placeholder="Subject">
-                        <textarea name="textarea" placeholder="Describe your project in detail..."></textarea>
-                        <button type="submit" name="submit">Submit</button>
+                    <form class="quote__form" >
+                        <input type="text" name="name" id="name" class="input input__name" placeholder="Name (Reqiured)" pattern="^[A-Za-zА-Яа-яЁё\s]+$" required>
+                        <input type="email" name="email" id="email" class="input input__email" placeholder="Email (Reqiured)" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+                        <input type="text" name="subject" id="subject" class="input input__sub" placeholder="Subject" maxlength="25">
+                        <textarea name="textarea" id="description" placeholder="Describe your project in detail..." maxlength="100"></textarea>
+                        <button  class="submit" >Submit</button>
+                        <div class="quote__message hidden">
+                            <div class="message">
+                                <h3 class="message__success">The letter was sent</h3>
+                                <p class="message__subject"></p>
+                                <p class="message__description"></p>
+                                <button type="button" class="close">Ok</button>
+                            </div>
+                        </div>
                     </form>
                     <div class="contact">
                         <h3>Contact Information</h3>
@@ -242,5 +289,6 @@
             </div>
         </footer>    
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
