feat: edit slider block style

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                     </ul>
                 </nav>
         </header>
-        <main class="main" id="main">
-            <section class="slider" id="main">
+        <main class="main" >
+            <section class="slider" id="slider" >
+                <div class="slider__wrapper" >
                     <div class="slider__button" ></div>
                     <div class="slider__images slider__images_1 active" >
                         <div class="phone phone_vertical">
@@ -49,6 +50,7 @@
                         </div>
                     </div>
                     <div class="slider__button slider__button_right"></div>
+                </div>
             </section>
             <section class="services" id="services">
                 <div class="services__wrapper">
