--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <div class="wrapper">
         <header class="header" id="header">
+                <span class="header__hamburger hamburger">
+                    <span class="hamburger__line"></span>
+                </span>
                 <div class="header__logo">
                     <a class="logo" href=""><h1>Singolo<b>*</b></h1></a>
                 </div>
