--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="header__logo">
                     <a class="logo" href=""><h1>Singolo<b>*</b></h1></a>
                 </div>
-                <nav class="header__navigation">
+                <nav  tabindex="-1"  class="header__navigation" >
                     <ul class="navigator">
                         <li><a class="navigator__link active" href="#slider">Home</a></li>
                         <li><a class="navigator__link" href="#services">Services</a></li>
@@ -29,7 +29,7 @@
         <main class="main" >
             <section class="slider" id="slider" >
                 <div class="slider__wrapper" >
-                    <div class="slider__button" ></div>
+                    <div class="slider__button slider__button_left" ></div>
                     <div class="slider__images slider__images_1 active" >
                         <div class="phones">
                             <div class="phone phone_vertical">
