fix: fix problem with hamburger menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="header__logo">
                     <a class="logo" href=""><h1>Singolo<b>*</b></h1></a>
                 </div>
-                <nav  tabindex="-1"  class="header__navigation" >
+                <nav class="header__navigation" >
                     <ul class="navigator">
                         <li><a class="navigator__link active" href="#slider">Home</a></li>
                         <li><a class="navigator__link" href="#services">Services</a></li>
